# rapp-pc-agent

./: README.md
rapp_core_agent/: CMakeLists.txt  package.xml  setup.py
rapp_core_agent/cfg/: audio_play_server_params.yaml  audio_player_params.yaml  audio_record_server_params.yaml
rapp_core_agent/launch/: audio_play_server.launch  audio_player_server.launch  audio_record_server.launch  core_agent.launch
rapp_core_agent/scripts/: audio_play_server_node  audio_player_server_node  audio_record_server_node
rapp_core_agent/src/: core_agent.cpp
rapp_core_agent/src/rapp_core_agent/: AudioPlayServer.py  AudioPlayerServer.py  AudioRecordServer.py  __init__.py
rapp_core_agent/src/rapp_core_agent/AudioPlayServer/: AudioPlayServer.py  __init__.py
rapp_core_agent/src/rapp_core_agent/AudioRecordServer/: AudioRecordServer.py  __init__.py
rapp_core_agent_msgs/: CMakeLists.txt  package.xml
rapp_core_agent_msgs/srv/: Record.srv  Say.srv
rapp_core_agent_ros_communications/: CMakeLists.txt  package.xml
rapp_core_agent_ros_communications/srv/: AudioPlayServerRosSrv.srv
rapp_pc_agent_ros_communications/: CMakeLists.txt  package.xml
rapp_pc_core_agent/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml  requirements.txt  setup.py
rapp_pc_core_agent/scripts/: audio_recorder_node
rapp_pc_core_agent/src/audioIO/: __init__.py
rapp_pc_core_agent/src/audioIO/player/: __init__.py
rapp_pc_core_agent/src/audioIO/recorder/: __init__.py
