<?xml version="1.0"?>
<package format="2">
  <name>rapp_pc_core_agent</name>
  <version>0.0.1</version>
  <description>The RAPP PC Core Agent package</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>

  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>

  <!--Using PySoundCard as a dependency - Not accessible through aptitude. Investigate Deps-->
  <!--<exec_depend>python-portaudio</exec_depend>-->
  <!--<exec_depend>python-numpy</exec_depend>-->
  <!--<exec_depend>python-pysoundcard</exec_depend>-->

  <depend>std_msgs</depend>
  <depend>rapp_pc_agent_ros_communications</depend>

</package>
